--- a/src/components/video-list--temp/VideoList.module.scss
+++ b/src/components/video-list--temp/VideoList.module.scss
@@ -2,4 +2,11 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  align-items: baseline;
+  column-gap: 20px;
+}
+
+.videoItem {
+  width: fit-content !important;
+  height: fit-content !important;
 }
