--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,28 @@
+:root {
+  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
+  direction: ltr;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: hsl(0, 0%, 15%);
+  background-color: hsl(0, 0%, 95%);
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+
+  --max-width-500: 500px;
+}
+
 iframe {
   border: none;
+}
+
+body {
+  padding: 0;
+  margin: 0;
 }
