Header - replaced Link with NavLink & added active link styling

--- a/src/headers/RootHeader.module.scss
+++ b/src/headers/RootHeader.module.scss
@@ -35,6 +35,9 @@
           &:hover {
             text-decoration: underline;
           }
+          &.active {
+            text-decoration: underline;
+          }
         }
       }
     }
