--- a/src/headers/RootHeader.module.scss
+++ b/src/headers/RootHeader.module.scss
@@ -5,7 +5,8 @@
   align-items: baseline;
   column-gap: 100px;
   padding: 0.7rem 1.5rem;
-  background-color: hsl(0, 0%, 85%);
+  background-color: hsl(0, 0%, 90%);
+  border-block-end: 1px solid hsl(0, 0%, 80%);
   
   h1 {
     margin: 0;
