--- a/src/headers/RootHeader.module.scss
+++ b/src/headers/RootHeader.module.scss
@@ -27,17 +27,19 @@
       div {
 
         a {
-          color: #333;
+          color: hsl(0, 0%, 30%);
           text-decoration: none;
-          font-weight: bold;
-          font-size: 1rem;
-          font-weight: 500;
-
+          font-weight: 400;
+          font-size: 0.75rem;
+          padding: 7px 7px;
+          
           &:hover {
-            text-decoration: underline;
+            font-weight: 600;
+            border-block-end: 2px solid orange;
           }
           &.active {
-            text-decoration: underline;
+            font-weight: 600;
+            border-block-end: 2px solid orange;
           }
         }
       }
