--- a/src/headers/RootHeader.module.scss
+++ b/src/headers/RootHeader.module.scss
@@ -30,14 +30,16 @@
           color: hsl(0, 0%, 30%);
           text-decoration: none;
           font-weight: 500;
-          font-size: 0.75rem;
-          padding: 7px 7px;
+          font-size: 0.9rem;
+          padding: 5px 15px;
+          border-radius: 5px;
+          border: 1px solid hsla(39, 100%, 50%, 0);
           
           &:hover {
-            border-block-end: 2px solid orange;
+            border: 1px solid hsl(39, 100%, 50%);
           }
           &.active {
-            border-block-end: 2px solid orange;
+            border: 1px solid hsl(39, 100%, 50%);
           }
         }
       }
