--- a/src/components/videos-filters/VideosFilters.module.scss
+++ b/src/components/videos-filters/VideosFilters.module.scss
@@ -8,6 +8,9 @@
   font-weight: 400;
   font-size: 0.75rem;
   border-bottom: 1px solid hsl(0, 0%, 85%);
+  position: sticky;
+  top: 0;
+  background-color: white;
 
   form {
     display: flex;
