--- a/src/components/video-info/VideoInfo.module.scss
+++ b/src/components/video-info/VideoInfo.module.scss
@@ -1,17 +1,23 @@
-.container {
-  background-color: hsl(0, 0%, 90%);
-  padding: 10px;
+.videoInfoContainer {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   column-gap: 10px;
+  padding: 10px;
 
-  .status {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .date {
+    margin: 0px;
+  }
+
+  .icons {
+    .status {
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 }
