VideoInfo - update video status button & menu

--- a/src/components/video-info/VideoInfo.module.scss
+++ b/src/components/video-info/VideoInfo.module.scss
@@ -11,6 +11,12 @@
   }
 
   .icons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    column-gap: 10px;
+
     .status {
       width: 20px;
       height: 20px;
