--- a/src/components/videos-filters/VideosFilters.module.scss
+++ b/src/components/videos-filters/VideosFilters.module.scss
@@ -1,27 +1,12 @@
 .filtersContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
+  row-gap: 20px;
   margin: 0px;
-  padding: 15px;
+  padding: 20px;
   font-weight: 400;
   font-size: 0.75rem;
-  border-bottom: 1px solid hsl(0, 0%, 85%);
-  position: sticky;
-  top: 0;
   background-color: white;
-  z-index: 5;
-
-  form {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    column-gap: 10px;
-    margin: 0px;
-    padding: 0px;
-    font-size: 1rem;
-    font-weight: 500;
-  }
 }
