--- a/src/headers/RootHeader.module.scss
+++ b/src/headers/RootHeader.module.scss
@@ -2,18 +2,19 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: baseline;
+  align-items: center;
   column-gap: 100px;
-  padding: 0.7rem 1rem;
+  padding-inline: 1rem;
   background-color: hsl(0, 0%, 100%);
   border-block-end: 1px solid hsl(0, 0%, 80%);
-  
+  height: 50px;
+
   h1 {
     margin: 0;
     font-size: 1rem;
     font-weight: 900;
   }
-  
+
   nav {
     .links {
       display: flex;
@@ -25,7 +26,6 @@
       margin: 0;
 
       div {
-
         a {
           color: hsl(0, 0%, 30%);
           text-decoration: none;
@@ -34,7 +34,7 @@
           padding: 5px 15px;
           border-radius: 5px;
           border: 1px solid hsla(39, 100%, 50%, 0);
-          
+
           &:hover {
             border: 1px solid hsl(39, 100%, 50%);
           }
