VideosPage - aside - width, bg color, border color variables

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@
   -webkit-text-size-adjust: 100%;
 
   --max-width-500: 500px;
+  --white-bg-border: hsl(0, 0%, 85%);
+  --light-gray-bg-border: hsl(0, 0%, 80%);
 }
 
 iframe {
