--- a/src/components/videos-grid/VideosGrid.module.scss
+++ b/src/components/videos-grid/VideosGrid.module.scss
@@ -4,7 +4,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  border-block-end: 1px solid hsl(0, 0%, 85%);
+  border-block-end: 1px solid var(--white-bg-border);
   padding-inline-start: 10px;
   font-weight: 400;
   font-size: 0.75rem;
