--- a/src/pages/all-videos-page/AllVideosPage.module.scss
+++ b/src/pages/all-videos-page/AllVideosPage.module.scss
@@ -4,11 +4,12 @@
   height: calc(100vh - 50px);
   
   aside {
-    border-inline-end: 1px solid hsl(0, 0%, 85%);
+    border-inline-end: 1px solid var(--light-gray-bg-border);
+    
+    background-color: hsl(0 0% 95% / 1);
 
     .asideToggle {
-      width: 100%;
-      border-block-end: 1px solid hsl(0, 0%, 85%);
+      border-block-end: 1px solid var(--light-gray-bg-border);
       height: 52px;
       padding-inline: 10px;
       display: flex;
