--- a/src/pages/all-videos-page/AllVideosPage.module.scss
+++ b/src/pages/all-videos-page/AllVideosPage.module.scss
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: row;
   height: calc(100vh - 50px);
+  background-color: var(--light-gray-bg);
   
   aside {
     border-inline-end: 1px solid var(--light-gray-bg-border);
-    background-color: hsl(0 0% 95% / 1);
 
     .asideToggle {
       border-block-end: 1px solid var(--light-gray-bg-border);
