--- a/src/components/video-info/VideoInfo.module.scss
+++ b/src/components/video-info/VideoInfo.module.scss
@@ -1,29 +1,35 @@
 .videoInfoContainer {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  column-gap: 10px;
-  padding: 10px;
+  flex-direction: column;
 
-  .date {
-    margin: 0px;
-  }
-
-  .icons {
+  .row1 {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     column-gap: 10px;
-
-    .status {
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
+    padding: 10px;
+    
+    .date {
+      margin: 0px;
+    }
+  
+    .icons {
       display: flex;
-      justify-content: center;
+      flex-direction: row;
+      justify-content: flex-end;
       align-items: center;
+      column-gap: 10px;
+  
+      .status {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     }
   }
+
 }
