--- a/src/headers/RootHeader.module.scss
+++ b/src/headers/RootHeader.module.scss
@@ -7,7 +7,7 @@
   padding-inline: 1rem;
   background-color: hsl(0, 0%, 100%);
   border-block-end: 1px solid hsl(0, 0%, 80%);
-  height: 50px;
+  height: 60px;
 
   h1 {
     margin: 0;
@@ -21,25 +21,29 @@
       flex-direction: row;
       justify-content: flex-start;
       align-items: center;
-      column-gap: 50px;
+      column-gap: 30px;
       list-style: none;
       margin: 0;
 
       div {
         a {
-          color: hsl(0, 0%, 30%);
+          color: hsl(0, 0%, 20%);
           text-decoration: none;
           font-weight: 500;
           font-size: 0.9rem;
-          padding: 5px 15px;
+          padding: 8px 15px;
           border-radius: 5px;
           border: 1px solid hsla(39, 100%, 50%, 0);
 
           &:hover {
-            border: 1px solid hsl(39, 100%, 50%);
+            // background-color: hsl(0, 0%, 98%);
+            color: hsl(0, 0%, 14%);
+            border: 1px solid #c4c4c4;
           }
           &.active {
-            border: 1px solid hsl(39, 100%, 50%);
+            // background-color: hsl(0, 0%, 98%);
+            color: hsl(0, 0%, 14%);
+            border: 1px solid #c4c4c4;
           }
         }
       }
