--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,11 @@
 
   --max-width-500: 500px;
   --light-gray-bg-border: hsl(0, 0%, 76%);
+  --light-gray-border: hsl(0, 0%, 90%);
 
   --light-gray-bg: hsl(0, 0%, 92%);
+  --button-bg-color: hsl(211, 100%, 40%);
+  --primary-color: hsl(226, 100%, 50%);
 }
 
 iframe {
@@ -45,4 +48,9 @@ a {
 
 .css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root {
     background-color: hsl(0, 0%, 100%);
+}
+
+.css-11xur9t-MuiPaper-root-MuiTableContainer-root {
+  border-block-end: 1px solid var(--light-gray-border);
+  box-shadow: 0px 2px 7px 0px white;
 }
