45 - chore: Events page - moved dialog code into custom hook. Created fetchEventById func.

--- a/src/components/event-form/EventForm.module.scss
+++ b/src/components/event-form/EventForm.module.scss
@@ -3,3 +3,9 @@
    flex-direction: column;
    row-gap: 30px;
 }
+
+.datePickersContainer {
+   display: flex;
+   flex-direction: row;
+   column-gap: 30px;
+}
