--- a/src/components/video-info/VideoInfo.module.scss
+++ b/src/components/video-info/VideoInfo.module.scss
@@ -32,6 +32,9 @@
     }
   }
   .row2 {
-    height: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0px 10px 10px 10px;
   }
 }
