--- a/src/components/videos-grid/VideosGrid.module.scss
+++ b/src/components/videos-grid/VideosGrid.module.scss
@@ -13,9 +13,9 @@
 
 .container {
   margin: 0px;
-  padding: 15px;
+  padding: 15px 15px 0px 15px;
   overflow-y: scroll;
-  height: calc(100vh - 60px - 52px);
+  height: calc(100vh - 91px - 52px);
 
   .videosGrid {
     display: grid;
