--- a/src/headers/RootHeader.module.scss
+++ b/src/headers/RootHeader.module.scss
@@ -7,7 +7,7 @@
   padding-inline: 1rem;
   background-color: hsl(0, 0%, 100%);
   border-block-end: 1px solid var(--light-gray-border);
-  height: 60px;
+  height: 76px;
 
   h1 {
     margin: 0;
@@ -27,23 +27,23 @@
 
       div {
         a {
-          color: hsl(0, 0%, 20%);
+          color: hsl(0, 0%, 30%);
+          border: 1px solid hsl(0, 0%, 60%);
           text-decoration: none;
           font-weight: 500;
           font-size: 0.9rem;
           padding: 8px 15px;
           border-radius: 5px;
-          border: 1px solid hsla(39, 100%, 50%, 0);
 
           &:hover {
             // background-color: hsl(0, 0%, 98%);
-            color: hsl(0, 0%, 14%);
-            border: 1px solid #c4c4c4;
+            color: var(--primary-color);
+            border: 1px solid var(--primary-color);
           }
           &.active {
             // background-color: hsl(0, 0%, 98%);
-            color: hsl(0, 0%, 14%);
-            border: 1px solid #c4c4c4;
+            color: var(--primary-color);
+            border: 1px solid var(--primary-color);
           }
         }
       }
