--- a/src/headers/RootHeader.module.scss
+++ b/src/headers/RootHeader.module.scss
@@ -21,7 +21,7 @@
       flex-direction: row;
       justify-content: flex-start;
       align-items: center;
-      column-gap: 30px;
+      column-gap: 40px;
       list-style: none;
       margin: 0;
 
@@ -32,18 +32,24 @@
           text-decoration: none;
           font-weight: 500;
           font-size: 0.9rem;
-          padding: 8px 15px;
+          padding: 8px 17px;
           border-radius: 5px;
-
-          &:hover {
-            // background-color: hsl(0, 0%, 98%);
-            color: var(--primary-color);
-            border: 1px solid var(--primary-color);
-          }
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-items: center;
+          column-gap: 7px;
+          font-weight: bold;
+          
           &.active {
-            // background-color: hsl(0, 0%, 98%);
             color: var(--primary-color);
             border: 1px solid var(--primary-color);
+            box-shadow: 0 0px 2px var(--primary-color);
+          }
+          &:hover {
+            color: var(--primary-color);
+            border: 1px solid var(--primary-color);
+            box-shadow: 0 0px 4px var(--primary-color);
           }
         }
       }
