--- a/src/components/video-list/VideoList.module.scss
+++ b/src/components/video-list/VideoList.module.scss
@@ -2,27 +2,25 @@
   display: flex;
   flex-direction: column;
   row-gap: 15px;
+  padding: 1rem 3rem 3rem 3rem;
   
-  h3 {
-    margin: 0px;
-  }
   .videosContainer {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     flex: 0 0 315px;
     gap: 15px;
-    background-color: var(--light-gray-bg);
-    padding: 15px;
     max-height: 260px;
     border-radius: 5px;
     overflow-x: auto;
-
+    
     .video {
       width: 315px;
       height: 243px;
       background-color: white;
       transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+      border: 1px solid var(--surface-1-border-color);
+      border-radius: 5px;
     }
 
     .video:hover {
