--- a/src/headers/RootHeader.module.scss
+++ b/src/headers/RootHeader.module.scss
@@ -6,7 +6,7 @@
   column-gap: 100px;
   padding-inline: 1rem;
   background-color: hsl(0, 0%, 100%);
-  border-block-end: 1px solid var(--light-gray-border);
+  border-block-end: 1px solid var(--surface-1-border-color);
   height: 76px;
 
   h1 {
