--- a/src/components/events-filters/EventsFilters.module.scss
+++ b/src/components/events-filters/EventsFilters.module.scss
@@ -6,5 +6,5 @@
   align-items: flex-start;
   column-gap: 15px;
   padding: 15px;
-  border-block-end: 1px solid var(--light-gray-border);
+  border-block-end: 1px solid var(--surface-1-border-color);
 }
