--- a/src/components/videos-timeline/VideosTimeline.module.scss
+++ b/src/components/videos-timeline/VideosTimeline.module.scss
@@ -8,7 +8,7 @@
   padding: 0 1.5rem;
   font-size: 0.8rem;
   background-color: hsl(0, 0%, 90%);
-  border-block-end: 1px solid var(--light-gray-border);
+  border-block-end: 1px solid var(--surface-1-border-color);
 
   a.backButton,
   a.backButton:hover {
