--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,8 @@
   -webkit-text-size-adjust: 100%;
 
   --max-width-500: 500px;
-  --light-gray-bg-border: hsl(0, 0%, 76%);
-  --light-gray-border: hsl(0, 0%, 90%);
+  --surface-1-border-color: hsl(0, 0%, 86%);
+  --surface-2-border-color: hsl(0, 0%, 60%);
 
   --light-gray-bg: hsl(0, 0%, 92%);
   --button-bg-color: hsl(211, 100%, 40%);
@@ -51,15 +51,16 @@ a {
   background-color: hsl(0, 0%, 100%);
 }
 
-.css-11xur9t-MuiPaper-root-MuiTableContainer-root {
-  border-block-end: 1px solid var(--light-gray-border);
-  box-shadow: 0px 2px 7px 0px white;
-}
-
 .event-dialog-progress-container {
   height: 300px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+h3 {
+  margin: 0px;
+  font-size: 1.6rem;
+  font-weight: 300;
 }
