100 - feat: RootHeader - logoType

--- a/src/headers/RootHeader.module.scss
+++ b/src/headers/RootHeader.module.scss
@@ -9,7 +9,7 @@
   border-block-end: 1px solid var(--surface-1-border-color);
   height: 76px;
 
-  h1 {
+  .logoType {
     margin: 0;
     font-size: 1.4rem;
     font-weight: 900;
