--- a/src/pages/event-page/EventPage.module.scss
+++ b/src/pages/event-page/EventPage.module.scss
@@ -37,6 +37,7 @@
   main {
     overflow-y: scroll;
     height: 100%;
+    width: 100%;
 
     .texts {
       padding: 1rem 3rem 3rem 3rem;
@@ -95,11 +96,9 @@
 
     .mapContainer {
       padding: 1rem 3rem 3rem 3rem;
-
-      .map {
-        width: 100%;
-        height: 100%;
-      }
+      display: flex;
+      flex-direction: column;
+      row-gap: 15px;
     }
   }
 }
