--- a/src/components/video-list/VideoList.module.scss
+++ b/src/components/video-list/VideoList.module.scss
@@ -3,6 +3,30 @@
   flex-direction: column;
   row-gap: 15px;
   padding: 1rem 3rem 3rem 3rem;
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+
+    .addVideos {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 6px;
+      padding: 8px 16px 8px 10px;
+      border-radius: 5px;
+      background-color: hsl(226, 100%, 50%);
+      color: white;
+      transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+      text-decoration: none;
+
+      &:hover {
+        background-color: hsl(226, 100%, 60%);
+      }
+    }
+  }
   
   .videosContainer {
     display: flex;
