121 - feat: Charts styling

--- a/src/pages/analytics-page/AnalyticsPage.module.scss
+++ b/src/pages/analytics-page/AnalyticsPage.module.scss
@@ -30,36 +30,64 @@
     flex: 1;
     padding: 30px;
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+
+    .secondChartsRow {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      justify-content: flex-start;
+      column-gap: 30px;
+    }
+
+    .chartBox {
+      width: 450px;
+      padding: 20px;
+      border-radius: 20px;
+      border: 1px solid #ccc;
+    }
+
+    .recentEvents {
+      display: flex;
+      flex-direction: column;
+      width: 300px;
+      // height: 300px;
+      padding: 20px;
+      border-radius: 20px;
+      border: 1px solid #ccc;
+      font-family: 'Roboto', sans-serif;
+
+      h2 {
+        font-size: 20px;
+        font-weight: 600;
+        padding: 0;
+        margin: 0;
+        margin-block-end: 10px;
+        color: var(--color);
+      }
+
+      .eventItem {
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+      }
+
+      .eventItem h3 {
+        margin: 0;
+        font-size: 16px;
+      }
+
+      .eventItem p {
+        margin: 0;
+        font-size: 14px;
+        color: #666;
+      }
+
+      .eventItem svg {
+        margin-right: 10px;
+      }
+    }
   }
-}
-
-.recentEvents {
-  display: flex;
-  flex-direction: column;
-  width: 300px;
-  height: 300px;
-  border: 1px solid #ccc;
-  padding: 10px;
-  margin-top: 20px;
-}
-
-.eventItem {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.eventItem h3 {
-  margin: 0;
-  font-size: 16px;
-}
-
-.eventItem p {
-  margin: 0;
-  font-size: 14px;
-  color: #666;
-}
-
-.eventItem svg {
-  margin-right: 10px;
 }
