--- a/src/components/video-list/VideoList.module.scss
+++ b/src/components/video-list/VideoList.module.scss
@@ -41,6 +41,7 @@
     max-height: 260px;
     border-radius: 5px;
     overflow-x: auto;
+    padding-block: 4px;
 
     .video {
       width: 315px;
@@ -52,8 +53,7 @@
     }
 
     .video:hover {
-      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
-        0 10px 10px rgba(0, 0, 0, 0.22);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.20);
     }
   }
 }
