--- a/src/components/video-list/VideoList.module.scss
+++ b/src/components/video-list/VideoList.module.scss
@@ -10,6 +10,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 10px;
+    padding-block: 10px 15px;
 
     .buttons {
       display: flex;
