--- a/src/pages/analytics-page/AnalyticsPage.module.scss
+++ b/src/pages/analytics-page/AnalyticsPage.module.scss
@@ -33,6 +33,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 30px;
+    position: relative;
 
     .secondChartsRow {
       display: flex;
@@ -67,6 +68,15 @@
         margin-block-end: 10px;
         color: var(--color);
       }
+    }
+
+    .map {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
     }
   }
 }
