--- a/src/components/analytics-filters/AnalyticsFilters.module.scss
+++ b/src/components/analytics-filters/AnalyticsFilters.module.scss
@@ -47,6 +47,12 @@
           border-radius: 50px;
         }
       }
+
+      .radiusFields {
+        display: flex;
+        flex-direction: row;
+        column-gap: 20px;
+      }
     }
   }
 }
