--- a/src/components/analytics-filters/AnalyticsFilters.module.scss
+++ b/src/components/analytics-filters/AnalyticsFilters.module.scss
@@ -27,25 +27,41 @@
       border-top: 1px solid var(--surface-1-border-color);
     }
 
+    
     .main {
       display: flex;
       flex-direction: column;
       row-gap: 20px;
-
+      
       .buttons {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        align-items: flex-start;
-        column-gap: 10px;
+        align-items: center;
+        height: 46px;
 
         .showMapButton {
           text-transform: none;
           width: fit-content;
-          padding-inline: 15px;
+          padding: 5px 15px;
           margin-bottom: 0px;
           border-radius: 50px;
         }
+
+        .right {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          column-gap: 10px;
+          padding: 0px;
+        }
+      }
+
+      .label {
+        font-size: 0.75rem;
+        font-weight: 400;
+        margin: 0px;
+        padding: 0px;
       }
 
       .radiusFields {
