44 - feat: Enhance VideoList and VideosGrid components to include eventTitle for improved navigation and display

--- a/src/components/videos-grid/VideosGrid.module.scss
+++ b/src/components/videos-grid/VideosGrid.module.scss
@@ -4,6 +4,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  column-gap: 20px;
   padding-inline-start: 10px;
   font-weight: 400;
   font-size: 0.75rem;
