44 - feat: Implement multi-select functionality in VideosGrid for improved video management

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
   --max-width-500: 500px;
   --surface-1-border-color: hsl(0, 0%, 86%);
   --surface-2-border-color: hsl(0, 0%, 60%);
+  --surface-selected: hsl(221, 100%, 75%);
 
   --light-gray-bg: hsl(0, 0%, 92%);
   --button-bg-color: hsl(211, 100%, 40%);
