--- a/src/components/videos-grid/VideosGrid.module.scss
+++ b/src/components/videos-grid/VideosGrid.module.scss
@@ -1,15 +1,35 @@
-.videoCount {
+.gridHeader {
   height: 52px;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
-  column-gap: 20px;
-  padding-inline-start: 10px;
+  column-gap: 0px;
+  padding-inline: 10px;
   font-weight: 400;
-  font-size: 0.75rem;
   margin: 0px;
   border-block-end: 1px solid var(--surface-1-border-color);
+  font-size: 0.8rem;
+
+  .headerTitles {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 20px;
+
+    h3 {
+      margin: 0px;
+      font-weight: 600;
+      font-size: 0.8rem;
+    }
+  }
+
+  .headerActions {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 10px;
+  }
 }
 
 .container {
@@ -40,6 +60,11 @@
     .video:hover {
       box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
         0 10px 10px rgba(0, 0, 0, 0.22);
+    }
+
+    .selected {
+      background-color: var(--surface-selected);
+      border: 1px solid var(--surface-selected);
     }
   }
 }
