--- a/src/components/video-list/VideoList.module.scss
+++ b/src/components/video-list/VideoList.module.scss
@@ -49,7 +49,7 @@
       height: 243px;
       background-color: white;
       transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-      border: 1px solid var(--surface-1-border-color);
+      border: 1px solid var(--card-border-color);
       border-radius: 5px;
     }
 
