--- a/src/components/videos-grid/VideosGrid.module.scss
+++ b/src/components/videos-grid/VideosGrid.module.scss
@@ -19,7 +19,7 @@
       width: 100%;
       background-color: white;
       transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-      border: 1px solid var(--surface-1-border-color);
+      border: 1px solid var(--card-border-color);
       border-radius: 5px;
     }
 
