--- a/src/index.css
+++ b/src/index.css
@@ -104,3 +104,39 @@ h3 {
   right: 8px !important;
   top: 8px !important;
 }
+
+.spinner-outer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-block-start: 200px;
+}
+
+.small-spinner-outer {
+  padding-block-start: 0px;
+}
+
+.spinner-inner {
+  border: 8px solid hsl(0, 0%, 86%);
+  border-radius: 50%;
+  border-top: 8px solid hsl(212, 100%, 48%);
+  width: 80px;
+  height: 80px;
+  animation: spin 2s linear infinite;
+}
+
+.small-spinner-inner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid hsl(0, 0%, 86%);
+  border-top: 4px solid hsl(212, 100%, 48%);
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
