47 - feat: AllVideosPage - pagination added

--- a/src/components/videos-grid/VideosGrid.module.scss
+++ b/src/components/videos-grid/VideosGrid.module.scss
@@ -2,7 +2,7 @@
   margin: 0px;
   padding: 15px 15px 0px 15px;
   overflow-y: scroll;
-  height: calc(100vh - 91px - 52px);
+  height: calc(100vh - 91px - 52px - 62px);
 
   .videosGrid {
     display: grid;
