--- a/src/index.css
+++ b/src/index.css
@@ -140,3 +140,30 @@ h3 {
     transform: rotate(360deg);
   }
 }
+.errorContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 3rem;
+  font-weight: 500;
+  margin-block: 0;
+  font-family: 'Roboto Serif', serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: italic;
+  font-variation-settings: 'wdth' 100, 'GRAD' 0;
+
+  h3 {
+    font-size: 3rem;
+    font-weight: 500;
+    margin-block: 0;
+  }
+
+  p {
+    font-size: 1.5rem;
+    font-weight: 300;
+    margin-block: 0;
+  }
+}
