167 - design: RootHeader - updated design of navigation buttons - colorful

--- a/src/headers/RootHeader.module.scss
+++ b/src/headers/RootHeader.module.scss
@@ -27,12 +27,10 @@
 
       div {
         a {
-          color: hsl(0, 0%, 30%);
-          border: 1px solid hsl(0, 0%, 60%);
           text-decoration: none;
           font-weight: 500;
           font-size: 0.9rem;
-          padding: 8px 17px;
+          padding: 8px 20px;
           border-radius: 50px;
           display: flex;
           flex-direction: row;
@@ -40,16 +38,36 @@
           align-items: center;
           column-gap: 7px;
           font-weight: bold;
+        }
+        
+        .eventsBtn {
+          color: hsl(var(--events-color), 25%);
+          border: 1px solid hsl(var(--events-color), 66%);
+          background-color: white;
           
-          &.active {
-            color: var(--primary-color);
-            border: 1px solid var(--primary-color);
-            box-shadow: 0 0px 2px var(--primary-color);
+          &:hover, &.active {
+            background-color: hsl(var(--events-color), 94%);
           }
-          &:hover {
-            color: var(--primary-color);
-            border: 1px solid var(--primary-color);
-            box-shadow: 0 0px 4px var(--primary-color);
+        }
+        
+        
+        .videosBtn {
+          color: hsl(var(--videos-color), 25%);
+          border: 1px solid hsl(var(--videos-color), 66%);
+          background-color: white;
+
+          &:hover, &.active {
+            background-color: hsl(var(--videos-color), 94%);
+          }
+        }
+        
+        .analyticsBtn {
+          color: hsl(var(--analytics-color), 25%);
+          border: 1px solid hsl(var(--analytics-color), 66%);
+          background-color: white;
+
+          &:hover, &.active {
+            background-color: hsl(var(--analytics-color), 94%);
           }
         }
       }
