--- a/src/index.css
+++ b/src/index.css
@@ -140,6 +140,7 @@ h3 {
     transform: rotate(360deg);
   }
 }
+
 .errorContainer {
   display: flex;
   flex-direction: column;
@@ -154,16 +155,65 @@ h3 {
   font-weight: 700;
   font-style: italic;
   font-variation-settings: 'wdth' 100, 'GRAD' 0;
+}
 
-  h3 {
-    font-size: 3rem;
-    font-weight: 500;
-    margin-block: 0;
-  }
+.errorContainer h3 {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-block: 0;
+}
 
-  p {
-    font-size: 1.5rem;
-    font-weight: 300;
-    margin-block: 0;
-  }
+.errorContainer p {
+  font-size: 1.5rem;
+  font-weight: 300;
+  margin-block: 0;
+}
+
+/* Style all scroll bars */
+*::-webkit-scrollbar {
+  height: 8px;
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* Firefox scrollbar styles */
+* {
+  scrollbar-width: thin; /* Sets the width of the scrollbar */
+  scrollbar-color: #888 #f1f1f1; /* Sets the color of the thumb and track */
+}
+
+/* Optional: Hover effect for Firefox */
+*::-moz-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* Internet Explorer and Edge (Legacy) scrollbar styles */
+*::-ms-scrollbar {
+  height: 8px;
+  width: 8px;
+}
+
+*::-ms-scrollbar-track {
+  background: #f1f1f1;
+}
+
+*::-ms-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+*::-ms-scrollbar-thumb:hover {
+  background: #555;
 }
