--- a/src/shared/components/location-filter/LocationFilter.module.scss
+++ b/src/shared/components/location-filter/LocationFilter.module.scss
@@ -1,9 +1,9 @@
-.main {
+.container {
   display: flex;
   flex-direction: column;
   row-gap: 20px;
 
-  .buttons {
+  .buttonsContainer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -16,6 +16,15 @@
       padding: 5px 15px;
       margin-bottom: 0px;
       border-radius: 50px;
+    }
+
+    .left {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      column-gap: 10px;
+      padding: 0px;
     }
 
     .right {
@@ -34,9 +43,71 @@
     padding: 0px;
   }
 
-  .radiusFields {
+  .inputsContainer {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+
+    .radiusFields {
+      display: flex;
+      flex-direction: row;
+      column-gap: 20px;
+    }
+  }
+}
+
+.containerHorizontal {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  column-gap: 20px;
+
+  .buttonsContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 20px;
+
+    .showMapButton {
+      text-transform: none;
+      height: fit-content;
+      min-width: 170px;
+      padding: 5px 15px;
+      margin-bottom: 0px;
+      border-radius: 50px;
+    }
+
+    .right {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      column-gap: 10px;
+      padding: 0px;
+    }
+  }
+
+  .inputsContainer {
     display: flex;
     flex-direction: row;
     column-gap: 20px;
+    align-items: center;
+    width: 100vw;
+    position: absolute;
+    left: 0;
+    top: 80px;
+    background-color: white;
+    z-index: 999 !important;
+    padding: 15px;
+
+    .radiusFields {
+      display: flex;
+      flex-direction: row;
+      column-gap: 20px;
+      justify-content: flex-start;
+      align-items: center;
+      min-width: 30%;
+      max-width: 70%;
+    }
   }
 }
