--- a/src/components/events-table/EventsTable.module.scss
+++ b/src/components/events-table/EventsTable.module.scss
@@ -1,42 +1,49 @@
-.columnTitle {
-  padding: 10px 5px 10px 0px;
-}
+// .columnTitle {
+//   padding: 10px 5px 10px 0px;
+// }
 
-.eventLink {
-  font-weight: bold;
-  text-decoration: none;
-  width: 100%;
-  color: var(--primary-color);
-}
+main {
+  position: relative;
 
-.eventLink:hover {
-  color: var(--text-hover-color);
+  .tableContainer {
+    height: calc(100vh - 76px - 122px - 81px);
+    overflow-x: auto;
 
-}
+    .editIcon {
+      transform: rotate(270deg);
+      color: var(--primary-color);
+    }
 
-.eventToReview {
-  background-color: hsl(0, 100%, 80%);
-  border-radius: 4px;
-  padding: 2px 5px;
-  font-weight: bold;
-}
+    .eventLink {
+      font-weight: bold;
+      text-decoration: none;
+      width: 100%;
+      color: var(--primary-color);
+    }
 
-.pagination {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  column-gap: 20px;
+    .eventLink:hover {
+      color: var(--text-hover-color);
+    }
 
-  position: fixed;
-  bottom: 0px;
-  background-color: white;
-  width: 100%;
-  padding: 10px 20px;
-  border-top: 1px solid #e0e0e0;
-}
+    .eventToReview {
+      background-color: hsl(0, 100%, 80%);
+      border-radius: 4px;
+      padding: 2px 5px;
+      font-weight: bold;
+    }
+  }
 
-.editIcon {
-  transform: rotate(270deg);
-  color: var(--primary-color);
+  .pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 20px;
+    position: fixed;
+    bottom: 0px;
+    background-color: white;
+    width: 100%;
+    padding: 10px 20px;
+    border-top: 1px solid #e0e0e0;
+  }
 }
