--- a/src/components/videos-filters/VideosFilters.module.scss
+++ b/src/components/videos-filters/VideosFilters.module.scss
@@ -5,7 +5,7 @@
   align-items: flex-start;
   row-gap: 20px;
   margin: 0px;
-  padding: 20px;
+  padding: 20px 20px 40px 20px;
   font-weight: 400;
   font-size: 0.75rem;
 
