--- a/src/components/events-filters/EventsFilters.module.scss
+++ b/src/components/events-filters/EventsFilters.module.scss
@@ -12,7 +12,7 @@
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
-      align-items: center;
+      align-items: baseline;
       column-gap: 15px;
       padding: 15px 15px 30px 15px;
       width: fit-content;
